<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageCircles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/circles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textWelcomeBack"
        android:fontFamily="@font/poppins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="117dp"
        android:layout_marginTop="190dp"
        android:layout_marginBottom="529dp"
        android:gravity="center"
        android:text="@string/join" 
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagePeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/people"
        app:layout_constraintEnd_toEndOf="@+id/textWelcomeBack"
        app:layout_constraintStart_toStartOf="@+id/textWelcomeBack"
        app:layout_constraintTop_toBottomOf="@+id/textWelcomeBack" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutEmail"
        android:textColorHint="@color/black"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/imagePeople"
        app:layout_constraintStart_toStartOf="@+id/imagePeople"
        app:layout_constraintTop_toBottomOf="@+id/imagePeople"
        app:boxCornerRadiusTopStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusBottomEnd="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:fontFamily="@font/poppins"
            android:id="@+id/editTextEmail"
            android:hint="@string/email"
            android:paddingStart="30dp"
            android:lines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutConfirmPassword"
        android:textColorHint="@color/black"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutEmail"
        app:layout_constraintStart_toStartOf="@+id/inputLayoutEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutEmail"
        app:boxCornerRadiusTopStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusBottomEnd="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:fontFamily="@font/poppins"
            android:id="@+id/editTextConfirmPassword"
            android:paddingStart="30dp"
            android:hint="@string/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textForgotPassword"
        android:fontFamily="@font/poppins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/forgot"
        android:textSize="16sp"
        android:textColor="@color/yellow"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/inputLayoutConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutConfirmPassword" />

    <com.google.android.material.button.MaterialButton
        android:fontFamily="@font/poppins_black"
        android:id="@+id/buttonSignIn"
        android:textColor="@color/black"
        android:backgroundTint="@color/yellow"
        android:textAllCaps="false"
        android:text="@string/signIn"
        android:paddingVertical="16dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/textForgotPassword"
        app:layout_constraintStart_toStartOf="@+id/textForgotPassword"
        app:layout_constraintTop_toBottomOf="@+id/textForgotPassword"
        app:cornerRadius="10dp"/>

    <TextView
        android:fontFamily="@font/poppins"
        android:id="@+id/textDontHave"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/dontHave"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/buttonSignIn"
        app:layout_constraintStart_toStartOf="@+id/buttonSignIn"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />

    <TextView
        android:id="@+id/textSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fontFamily="@font/poppins"
        android:text="@string/signUp"
        android:textColor="@color/yellow"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textDontHave"
        app:layout_constraintStart_toStartOf="@+id/textDontHave"
        app:layout_constraintTop_toBottomOf="@+id/textDontHave" />
</androidx.constraintlayout.widget.ConstraintLayout>