<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageCircles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/circles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textWelcomeOnboard"
        android:text="@string/welcome_onboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginHorizontal="75dp"
        android:fontFamily="@font/poppins"
        android:layout_marginBottom="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textHelp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/we_help"
        android:fontFamily="@font/poppins"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintEnd_toEndOf="@+id/textWelcomeOnboard"
        app:layout_constraintStart_toStartOf="@+id/textWelcomeOnboard"
        app:layout_constraintTop_toBottomOf="@+id/textWelcomeOnboard" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutFullName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/black"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:layout_constraintEnd_toEndOf="@+id/textHelp"
        app:layout_constraintStart_toStartOf="@+id/textHelp"
        app:layout_constraintTop_toBottomOf="@+id/textHelp">

        <com.google.android.material.textfield.TextInputEditText
            android:textSize="14sp"
            android:fontFamily="@font/poppins"
            android:id="@+id/editTextFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_full_name"
            android:lines="1"
            android:paddingStart="30dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="18dp"
        android:textColorHint="@color/black"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutFullName"
        app:layout_constraintStart_toStartOf="@+id/inputLayoutFullName"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutFullName">

        <com.google.android.material.textfield.TextInputEditText
            android:textSize="14sp"
            android:fontFamily="@font/poppins"
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:lines="1"
            android:paddingStart="30dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutEnterPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="18dp"
        android:textColorHint="@color/black"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutEmail"
        app:layout_constraintStart_toStartOf="@+id/inputLayoutEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:textSize="14sp"
            android:fontFamily="@font/poppins"
            android:id="@+id/editTextEnterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:lines="1"
            android:paddingStart="30dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutConfirmPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="18dp"
        android:textColorHint="@color/black"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutEnterPassword"
        app:layout_constraintStart_toStartOf="@+id/inputLayoutEnterPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutEnterPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:fontFamily="@font/poppins"
            android:textSize="14sp"
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:lines="1"
            android:paddingStart="30dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:paddingVertical="16dp"
        android:id="@+id/buttonRegister"
        android:fontFamily="@font/poppins_black"
        android:backgroundTint="@color/yellow"
        android:textColor="@color/black"
        android:layout_marginHorizontal="30dp"
        android:textAllCaps="false"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/inputLayoutConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/inputLayoutConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutConfirmPassword"
        app:cornerRadius="10dp"/>

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/textAlreadyHave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:textSize="16sp"
        android:gravity="center"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black"
        android:layout_marginEnd="136dp"
        android:layout_marginStart="55dp"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegister"
        app:layout_constraintStart_toStartOf="@+id/buttonRegister"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

    <TextView
        android:clickable="true"
        android:layout_marginTop="10dp"
        android:id="@+id/textSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="277dp"
        android:layout_marginEnd="80dp"
        android:text="@string/signIn"
        android:fontFamily="@font/poppins"
        android:textSize="16sp"
        android:textColor="@color/yellow"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegister"
        app:layout_constraintStart_toStartOf="@+id/buttonRegister"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>